WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236966
Crash when calling WEBGL_lose_context.loseContext() after the context has been lost
https://bugs.webkit.org/show_bug.cgi?id=236966
Summary
Crash when calling WEBGL_lose_context.loseContext() after the context has bee...
Kimmo Kinnunen
Reported
2022-02-21 03:45:40 PST
Crash when calling WEBGL_lose_context.loseContext() after the context has been lost
Attachments
Patch
(8.07 KB, patch)
2022-02-21 05:09 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Patch
(9.02 KB, patch)
2022-02-21 23:04 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2022-02-21 04:24:40 PST
<
rdar://85765536
>
Kimmo Kinnunen
Comment 2
2022-02-21 05:09:20 PST
Created
attachment 452724
[details]
Patch
Kimmo Kinnunen
Comment 3
2022-02-21 23:04:22 PST
Created
attachment 452830
[details]
Patch
EWS
Comment 4
2022-02-23 00:24:47 PST
Committed
r290356
(
247674@main
): <
https://commits.webkit.org/247674@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 452830
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug